feat(resources_endpoint): add routes, tests, swag
